--- a/workers/python/pyproject.toml
+++ b/workers/python/pyproject.toml
@@ -14,7 +14,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["async_worker"]
+where = ["."]
 
 [tool.ruff]
 exclude = [
