--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,6 +138,7 @@ dev = [
     "coverage>=7.9.2",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
+    "pytest-cov>=7.0.0",
 ]
 
 [tool.coverage.run]
