--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,18 +5,19 @@ on:
     inputs:
       PYTHON_VERSION:
         description: Python version used to run tests
-        required: true
+        required: false
         type: string
+        default: "3.13"
   workflow_dispatch:
     inputs:
       PYTHON_VERSION:
         description: Python version used to run tests
-        required: true
+        required: false
         type: string
-        default: 3.X
+        default: "3.13"
 
 jobs:
-  tests:
+  lint:
     name: Lint code
     runs-on: ubuntu-24.04
     permissions:
@@ -26,9 +27,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: ${{ inputs.PYTHON_VERSION }}
+        python-version: ${{ inputs.PYTHON_VERSION || '3.13' }}
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
 
     - name: Run lint
       run: make lint
