--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,7 @@ on:
         description: Python version used to run tests
         required: true
         type: string
-        default: 3.X
+        default: "3.13"
 
 jobs:
   tests:
