--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,6 +139,7 @@ dev = [
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=7.0.0",
+    "ruff>=0.13.1",
 ]
 
 [tool.coverage.run]
