--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,5 +7,5 @@
 - name: example2
   # json_schema: ./schemas/example.json # Default: No schema
   # quotas: 1000                        # Default: No quotas
-  # in_queue: example_queue_in          # Default: <svc>_queue_in
-  # out_queue: example_queue_out        # Default: <svc>_queue_out
+  in_queue: in_queue_python             # Default: <svc>_queue_in
+  out_queue: out_queue_python           # Default: <svc>_queue_out
