--- a/workers/python/pyproject.toml
+++ b/workers/python/pyproject.toml
@@ -1,12 +1,30 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "mic-worker"
-version = "0.1.0"
+version = "0.1.2"
 description = "Worker package for async tasks"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aio-pika>=9.5.5",
+    "pytest>=8.4.2",
 ]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-mock>=3.10.0",
+]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-dir]
+"" = "src"
 
 [project.urls]
 Repository = "https://github.com/titigmr/async-api"
@@ -135,3 +153,9 @@ exclude_also = [
 skip_covered = false
 precision = 2
 sort = "-miss"
+
+[dependency-groups]
+test = [
+    "pytest>=8.4.2",
+]
+
