--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,3 +19,8 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+  release-python:
+    uses: ./.github/workflows/build-and-push-package.yml
+    permissions:
+    contents: write
+    pull-requests: write
