feat(worker): add release
3 create python package for worker and publish to GitHub (#21)

* fix(release): add release

fix(ci): release package

* fix(worker): missing packages

* fix(lint): fix linter and test

* fix(worker): worker linter

---------

Co-authored-by: mitchou10 <mitchou10@example.com>

fix(publish): publish package

fix(ci): fix ci

fix(ci) lint

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,3 +19,9 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+  release-python:
+    uses: ./.github/workflows/build-and-push-package.yml
+    permissions:
+      contents: write
+      pull-requests: write
+      packages: write
