--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ exclude = [
     "node_modules",
     "site-packages",
     "venv",
+    "workers",
 ]
 
 line-length = 120
@@ -149,7 +150,8 @@ source = [
 command_line = "-m pytest --junitxml=junit.xml"
 omit = [
     "tests/*",
-    "__init__.py"
+    "__init__.py",
+    "workers/*"
 ]
 
 [tool.coverage.report]
@@ -159,3 +161,6 @@ exclude_also = [
 skip_covered = false
 precision = 2
 sort = "-miss"
+
+[tool.pytest.ini_options]
+addopts = "--ignore=workers/python"
