--- a/workers/python/pyproject.toml
+++ b/workers/python/pyproject.toml
@@ -155,6 +155,10 @@ precision = 2
 sort = "-miss"
 
 [dependency-groups]
+dev = [
+    "pytest-asyncio>=0.1.1",
+    "pytest>=8.4.2",
+]
 test = [
     "pytest>=8.4.2",
 ]
