fix(release): add release
fix(ci): release package

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,5 +22,6 @@ jobs:
   release-python:
     uses: ./.github/workflows/build-and-push-package.yml
     permissions:
-    contents: write
-    pull-requests: write
+      contents: write
+      pull-requests: write
+      packages: write
