fix(ci): on.workflow_call trigger

--- a/.github/workflows/build-and-push-package.yml
+++ b/.github/workflows/build-and-push-package.yml
@@ -1,9 +1,20 @@
 name: Python package
 
 on:
-  push:
-    tags:
-      - '*'
+  workflow_call:
+    outputs:
+      release-created:
+        description: Has the release been created
+        value: ${{ jobs.release.outputs.release-created }}
+      major-tag:
+        description: Major version tag
+        value: ${{ jobs.release.outputs.major-tag }}
+      minor-tag:
+        description: Minor version tag
+        value: ${{ jobs.release.outputs.minor-tag }}
+      patch-tag:
+        description: Patch version tag
+        value: ${{ jobs.release.outputs.patch-tag }}
 
 jobs:
   build-and-push-package:
