--- a/.github/workflows/build-and-push-package.yml
+++ b/.github/workflows/build-and-push-package.yml
@@ -26,6 +26,7 @@ jobs:
         run: uv build
         
       - name: Publish to GitHub Packages
+        working-directory: workers/python
         run: |
           uv add twine
           uv run python -m twine upload \
